--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,55 @@
-body{
+body {
     text-align: center;
+	
 }
-table{
-    
+table {
+    background-color: #CCFFFF;
     border-collapse: collapse;
     height: 700px;
     width: 700px;
     margin: auto;
 }
-td{
+td {
     border: 2px black solid;
 }
-.corner{
+.corner {
     height: 100px;
     width: 100px;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+}
+.go {
+	transform: rotate(90deg);
+	transform-origin: left top 0;
+}
+.vertical, .horizontal {
+	padding: 0px;
+}
+.brown {
+    border-bottom: brown solid 20px;
+	width: auto;
+	height: 50%;
+}
+.lightblue {
+	border-bottom: #00FFFF solid 20px;
+	width: auto;
+	height: 50%;
+}
+.blue {
+	border-right: blue solid 20px;
+	width: auto;
+	height: 100%;
+}
+.green {
+	border-right: green solid 20px;
+	width: auto;
+	height: 100%;
+}
+.topspace {
+	height: 50%;
+}
+.leftspace {
+	height: 50%;
+	float: left;
 }
