--- a/stylesheet.css
+++ b/stylesheet.css
@@ -115,12 +115,25 @@ h1, h4, h5 {
 	text-align: center;
 }
 .leftspace {
-	height: 50%;
 	float: left;
 	text-align: center;
 }
 .rightspace {
-	height: 50%;
 	float: right;
 	text-align: center;
+}
+.textcenterbottom {
+	
+}
+.textcenterleft {
+	padding-left: 20px;
+}
+.textcenterright10 {
+	padding-right: 10px;
+}
+.textcenterright20 {
+	padding-right: 20px;
+}
+.textcenterright30 {
+	padding-right: 30px;
 }
