--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,21 @@ h1, h4, h5 {
 #panther {
 	text-align: center;
 }
+#exams {
+	padding-top: 25px;
+	padding-left: 100px;
+	float: left;
+}
+#credit {
+	padding-right: 100px;
+	padding-bottom: 25px;
+	float: right;
+}
+#logo{
+    width: 800px;
+    height: auto;
+	padding-bottom: 65px;
+}
 .top {
 	height: 100px;
 	width: 100px;
@@ -136,8 +151,4 @@ h1, h4, h5 {
 }
 .textcenterright30 {
 	padding-right: 30px;
-}
-#logo{
-    width: 500px;
-    height: auto;
 }
