--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,12 @@ table {
     width: 900px;
     margin: auto;
 	table-layout: fixed;
+    font-family: "Arial", "Helvetica", sans-serif;
+    
+}
+body{
+    background-color: beige;
+    text-align: center;
 }
 td {
     border: 2px black solid;
@@ -151,4 +157,8 @@ h1, h4, h5 {
 }
 .textcenterright30 {
 	padding-right: 30px;
+}
+a {
+
+    font-size:30px;
 }
