Added players and player table

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,17 @@
-table {
+#board {
     background-color: #CCFFFF;
     border-collapse: collapse;
     height: 900px;
     width: 900px;
     margin: auto;
 	table-layout: fixed;
-    font-family: "Arial", "Helvetica", sans-serif;
+    
     
 }
 body{
     background-color: beige;
     text-align: center;
+    font-family: "Arial", "Helvetica", sans-serif;
 }
 td {
     border: 2px black solid;
@@ -161,4 +162,14 @@ h1, h4, h5 {
 a {
 
     font-size:30px;
+    Margin: 10px;
+}
+#players{
+    margin: auto;
+    border: 2px black solid;
+    border-collapse: collapse;
+}
+.piece{
+    height: 35px;
+    width: auto;
 }
